--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Success Test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>McDONALD'S</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+</head>
+<body>
+    <header>
+        <nav class="nav-bar">
+            <li class="logo"><a href="#"><img src="./images/logo.png" alt="logo"></a></li>
+        </nav>
+    </header>
+    <section class="wrapper">
+        <div class="left-col">
+            <h1 class="title">Thanks for your order here is your receipt</h1>
+            <p class="text">
+            £4.99
+            1X big tasty meal.
+            As promised use code MONEYHUB23 for 30% off your next order
+          </p>
+        </div>
+        <div class="rigth-col">
+            <img src="./images/burger.png" alt="burger">
+        </div>
+    </section>
+</body>
+</html>
