--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="nav-bar">
-            <li class="logo"><a href="#"><img src="./images/logo.png" alt="logo"></a></li>
+            <li class="logo"><a href="#"><img src="./logo.png" alt="logo"></a></li>
         </nav>
     </header>
     <section class="wrapper">
@@ -24,7 +24,7 @@
           </p>
         </div>
         <div class="rigth-col">
-            <img src="./images/burger.png" alt="burger">
+            <img src="./burger.png" alt="burger">
         </div>
     </section>
 </body>
