--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="left-col">
             <h1 class="title">Thanks for your order here is your receipt</h1>
             <p class="text">
-            £4.99
-            1X big tasty meal.
-            As promised use code MONEYHUB23 for 30% off your next order
+            <h2 class="title"> £4.99 </h2>
+            <h2 class="title"> 1X big tasty meal. </h2>
+          <p style="border-width:3px; border-style:solid; border-color:#FF0000; padding: 1em;"> As promised use code MONEYHUB23 for 30% off your next order </p>
           </p>
         </div>
         <div class="rigth-col">
