--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <nav class="nav-bar">
             <li class="logo"><a href="#"><img src="./logo.png" alt="logo"></a></li>
+            <li class="logo"><a href="#"><img src="./mh.png" alt="logo"></a></li>
         </nav>
     </header>
     <section class="wrapper">
