--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </header>
     <section class="wrapper">
         <div class="left-col">
-            <h1 class="title">Thanks for your order here is your receipt</h1>
+            <h1 class="title">#31</h1>
+            <h1 class="title">Thank you for your order.</h1>
             <p class="text">
             <h2 class="title"> £4.99 </h2>
             <h2 class="title"> 1X big tasty meal. </h2>
