--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <p class="text">
             <h2 class="title"> £4.99 </h2>
             <h2 class="title"> 1X big tasty meal. </h2>
-          <p style="border-width:4px; border-style:solid; border-color:#FFF; padding: 2em;"> As promised use code MONEYHUB23 for 30% off your next order </p>
+            <h3 class="title">Use the code below for 30% off your next order</h3>
+          <p style="border-width:4px; border-style:solid; border-color:#FFF; padding: 2em;">MONEYHUB-YORKSHIRE-23</p>
           </p>
         </div>
         <div class="rigth-col">
