--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <section class="wrapper">
         <div class="left-col">
             <h1 class="title">#31</h1>
-            <h1 class="title">Thank you for your order.</h1>
-            <p class="text">
+            <h1 class="title">Thank you!</h1>
             <h2 class="title"> £4.99 </h2>
             <h2 class="title"> 1X big tasty meal. </h2>
             <h3 class="title">Use the code below for 30% off your next order</h3>
