--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>McDONALD'S</title>
+    <title>McMoneyhub</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 </head>
@@ -17,12 +17,10 @@
     </header>
     <section class="wrapper">
         <div class="left-col">
-            <h1 class="title">#31</h1>
-            <h1 class="title">Thank you!</h1>
-            <h2 class="title"> £4.99 </h2>
-            <h2 class="title"> 1X big tasty meal. </h2>
-            <h3 class="title">Use the code below for 30% off your next order</h3>
-          <p style="border-width:4px; border-style:solid; border-color:#FFF; padding: 2em;">MONEYHUB-YORKSHIRE-23</p>
+            <h1 class="title">#31 - Thank you for your oder</h1>
+            <h2>1X big tasty meal -  £4.99</h2>
+            <h2> Use the code below for 30% off your next order</h3>
+          <p style="border-width:4px; border-style:solid; border-color:#FFF; padding: 1em;">MONEYHUB-YORKSHIRE-23</p>
           </p>
         </div>
         <div class="rigth-col">
