--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </header>
     <section class="wrapper">
         <div class="left-col">
-            <h1 class="title">#31 - Thanks for your order</h1>
-            <h2>1X big tasty meal -  £4.99</h2>
+            <h1 class="title">Order: #31 - Thank you!</h1>
+            <h2>1x big tasty meal - £4.99</h2>
             <h2> Use the code below for 30% off your next order</h3>
           <p style="border-width:4px; border-style:solid; border-color:#FFF; padding: 1em;">MONEYHUB-YORKSHIRE-23</p>
           </p>
