--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="nav-bar">
-            <li class="logo"><a href="#"><img src="./mh.png" alt="logo"></a></li>
+            <li class="logo"><a href="#"><img src="./mhlong.png" alt="logo"></a></li>
             <li class="logo"><a href="#"><img src="./logo.png" alt="logo"></a></li>
         </nav>
     </header>
